# Deal-Research-Agent

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  PHASES.md  PROMPT_OPTIMIZATION.md  README.md  SETUP.md  SPECIFICATION.md  env.example  pyproject.toml  requirements.txt  test_api_connection.py
.agent/: PLANS.md
data/bench/: bench_queries.json
dealgraph/: __init__.py
dealgraph/agent/: __init__.py  orchestrator.py  tools.py
dealgraph/cli/: main.py
dealgraph/config/: __init__.py  settings.py
dealgraph/data/: __init__.py  graph_builder.py  ingest.py  schemas.py
dealgraph/embeddings/: __init__.py  encoder.py  index.py  local_encoder.py
dealgraph/eval/: __init__.py  bench_dataset.py  compare_prompts.py  compare_ranking.py  metrics.py
plans/: execplan_2_1_embeddings_index.md  execplan_2_2_graph_search_logic.md  execplan_2_3_end_to_end_retrieval.md  execplan_3_1_reasoning_module.md  execplan_3_2_dspy_optimization.md  execplan_3_3_performance_testing.md  execplan_3_4_reasoning_integration.md  execplan_4_1_reverse_query_data_gen.md  execplan_4_2_ranking_model.md  execplan_4_3_ranking_integration.md  execplan_5_1_agent_orchestrator.md  execplan_5_2_cli_interface.md  execplan_5_3_documentation_testing.md
tests/: TEST_PLAN.md  test_agent_orchestrator.py  test_bench_dataset.py  test_cli.py  test_compare_prompts.py  test_data_ingest.py  test_data_schemas.py  test_dspy_optimization.py  test_embeddings_index.py  test_end_to_end_retrieval.py  test_eval_metrics.py  test_graph_builder.py  test_graph_features.py  test_graph_search.py  test_performance_benchmarks.py  test_rank_integration.py  test_ranking_data_gen.py  test_ranking_features.py  test_ranking_model.py  test_ranking_train.py  test_reasoning.py
(+27 files in other folders)
